s2: AOSiP Bring-Up

--- a/overlay-aosip/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay-aosip/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -15,6 +15,8 @@
 -->
 <resources>
     <!-- Max visible notification icons -->
-    <integer name="config_maxVisibleNotificationIcons">6</integer>
-    <integer name="config_maxVisibleNotificationIconsWhenDark">7</integer>
+    <integer name="config_maxVisibleNotificationIcons">7</integer>
+    <integer name="config_maxVisibleNotificationIconsWhenDark">8</integer>
+
+    <bool name="config_batteryInQSPanel">false</bool>
 </resources>
