--- a/overlay-aosip/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-aosip/frameworks/base/core/res/res/values/config.xml
@@ -1,14 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2015 The CyanogenMod Project
-                   2017-2018 The LineageOS Project
-
+     Copyright (C) 2018 The LineageOS Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -16,23 +11,6 @@
      limitations under the License.
 -->
 <resources>
-  <!-- All the capabilities of the LEDs on this device, stored as a bit field.
-         This integer should equal the sum of the corresponding value for each
-         of the following capabilities present:
-
-         LIGHTS_RGB_NOTIFICATION_LED = 1
-         LIGHTS_RGB_BATTERY_LED = 2
-         LIGHTS_MULTIPLE_NOTIFICATION_LED = 4 (deprecated)
-         LIGHTS_PULSATING_LED = 8
-         LIGHTS_SEGMENTED_BATTERY_LED = 16
-         LIGHTS_ADJUSTABLE_NOTIFICATION_LED_BRIGHTNESS = 32
-         LIGHTS_BATTERY_LED = 64
-
-         For example, a device with notification and battery lights
-         that support pulsating and RGB control would set this config
-         to 75. -->
-    <integer name="config_deviceLightCapabilities">107</integer>
-
     <!-- Is the notification LED brightness adjustable ? Used to decide if the user can set LED brightness -->
     <bool name="config_adjustableNotificationLedBrightness">true</bool>
 
@@ -73,4 +51,7 @@
     <!-- Whether device needs to wait for Qualcomm MPCTL service to start
          before setting power profiles on boot. -->
     <bool name="config_waitForMpctlOnBoot">true</bool>
+
+    <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
+    <bool name="config_cleanupUnusedFingerprints">false</bool>
 </resources>
